--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,30 +1,7 @@
-# By default, would enforce { key: value } rather than { :key => value }.
-AllCops:
-  RunRailsCops: false
+inherit_from: 'https://raw.githubusercontent.com/PublicHealthEngland/ndr_dev_support/master/.rubocop.yml'
 
-# Multi-line method chaining should be done with trailing dots.
-Style/DotPosition:
-  EnforcedStyle: trailing
-
-HashSyntax:
-  EnforcedStyle: hash_rockets
-  SupportedStyles:
-    - ruby19
-    - hash_rockets
-
-# Would enforce "-> { }", which we cannot use yet.
-Lambda:
+Rails:
   Enabled: false
 
-# ...
-LineLength:
-  Max: 99
-
-# Relax some of the cops for tests
-Metrics/ClassLength: &exclude_tests
-  Exclude:
-    - test/**/*.rb
-Metrics/MethodLength: *exclude_tests
-Style/ClassAndModuleChildren: *exclude_tests
-Style/Documentation: *exclude_tests
-Style/NumericLiterals: *exclude_tests
+AllCops:
+  TargetRubyVersion: 2.3
