--- a/code_safety.yml
+++ b/code_safety.yml
@@ -46,8 +46,8 @@ file safety:
     safe_revision: fdea3ed4f37453978857611724116f70dd08f1fd
   bin/setup:
     comments: 
-    reviewed_by: 
-    safe_revision: 
+    reviewed_by: timgentry
+    safe_revision: 065dcccb9db71374cea5aad104657a5c1f877d1c
   lib/tnql.rb:
     comments: 
     reviewed_by: timgentry
@@ -58,64 +58,78 @@ file safety:
     safe_revision: 2c3dd20879903b98f7f05d5d3e73b1478c275c93
   lib/tnql/grammars.rb:
     comments: 
-    reviewed_by: 
-    safe_revision: 
+    reviewed_by: timgentry
+    safe_revision: 61b0293f89d57118268e15fc49b529c64bbbe2b7
   lib/tnql/grammars/age.treetop:
-    comments: 
-    reviewed_by: 
-    safe_revision: 
+    comments: It is a known issue that this is potentially susceptible to certain
+      kinds of DoS attack
+    reviewed_by: timgentry
+    safe_revision: b3a8b33cbc5dd29822e0e6ded32500ccd7a15670
   lib/tnql/grammars/batch_types.treetop:
-    comments: 
-    reviewed_by: 
-    safe_revision: 
+    comments: It is a known issue that this is potentially susceptible to certain
+      kinds of DoS attack
+    reviewed_by: timgentry
+    safe_revision: b3a8b33cbc5dd29822e0e6ded32500ccd7a15670
   lib/tnql/grammars/dates.treetop:
-    comments: 
-    reviewed_by: 
-    safe_revision: 
+    comments: It is a known issue that this is potentially susceptible to certain
+      kinds of DoS attack
+    reviewed_by: timgentry
+    safe_revision: b3a8b33cbc5dd29822e0e6ded32500ccd7a15670
   lib/tnql/grammars/diagnosis.treetop:
-    comments: 
-    reviewed_by: 
-    safe_revision: 
+    comments: It is a known issue that this is potentially susceptible to certain
+      kinds of DoS attack
+    reviewed_by: timgentry
+    safe_revision: b3a8b33cbc5dd29822e0e6ded32500ccd7a15670
   lib/tnql/grammars/e_base_records.treetop:
-    comments: 
-    reviewed_by: 
-    safe_revision: 
+    comments: It is a known issue that this is potentially susceptible to certain
+      kinds of DoS attack
+    reviewed_by: timgentry
+    safe_revision: b3a8b33cbc5dd29822e0e6ded32500ccd7a15670
   lib/tnql/grammars/main.treetop:
-    comments: 
-    reviewed_by: 
-    safe_revision: 
+    comments: It is a known issue that this is potentially susceptible to certain
+      kinds of DoS attack
+    reviewed_by: timgentry
+    safe_revision: b3a8b33cbc5dd29822e0e6ded32500ccd7a15670
   lib/tnql/grammars/patient.treetop:
-    comments: 
-    reviewed_by: 
-    safe_revision: 
+    comments: It is a known issue that this is potentially susceptible to certain
+      kinds of DoS attack
+    reviewed_by: timgentry
+    safe_revision: b3a8b33cbc5dd29822e0e6ded32500ccd7a15670
   lib/tnql/grammars/provider.treetop:
-    comments: 
-    reviewed_by: 
-    safe_revision: 
+    comments: It is a known issue that this is potentially susceptible to certain
+      kinds of DoS attack
+    reviewed_by: timgentry
+    safe_revision: b3a8b33cbc5dd29822e0e6ded32500ccd7a15670
   lib/tnql/grammars/registration_status.treetop:
-    comments: 
-    reviewed_by: 
-    safe_revision: 
+    comments: It is a known issue that this is potentially susceptible to certain
+      kinds of DoS attack
+    reviewed_by: timgentry
+    safe_revision: b3a8b33cbc5dd29822e0e6ded32500ccd7a15670
   lib/tnql/grammars/registry.treetop:
-    comments: 
-    reviewed_by: 
-    safe_revision: 
+    comments: It is a known issue that this is potentially susceptible to certain
+      kinds of DoS attack
+    reviewed_by: timgentry
+    safe_revision: b3a8b33cbc5dd29822e0e6ded32500ccd7a15670
   lib/tnql/grammars/staging.treetop:
-    comments: 
-    reviewed_by: 
-    safe_revision: 
+    comments: It is a known issue that this is potentially susceptible to certain
+      kinds of DoS attack
+    reviewed_by: timgentry
+    safe_revision: b3a8b33cbc5dd29822e0e6ded32500ccd7a15670
   lib/tnql/grammars/treatment.treetop:
-    comments: 
-    reviewed_by: 
-    safe_revision: 
+    comments: It is a known issue that this is potentially susceptible to certain
+      kinds of DoS attack
+    reviewed_by: timgentry
+    safe_revision: b3a8b33cbc5dd29822e0e6ded32500ccd7a15670
   lib/tnql/grammars/tumour_type.treetop:
-    comments: 
-    reviewed_by: 
-    safe_revision: 
+    comments: It is a known issue that this is potentially susceptible to certain
+      kinds of DoS attack
+    reviewed_by: timgentry
+    safe_revision: b3a8b33cbc5dd29822e0e6ded32500ccd7a15670
   lib/tnql/grammars/vital_status.treetop:
-    comments: 
-    reviewed_by: 
-    safe_revision: 
+    comments: It is a known issue that this is potentially susceptible to certain
+      kinds of DoS attack
+    reviewed_by: timgentry
+    safe_revision: b3a8b33cbc5dd29822e0e6ded32500ccd7a15670
   lib/tnql/nodes.rb:
     comments: 
     reviewed_by: timgentry
