--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: ruby
 
 rvm:
-  - 2.3.6
-  - 2.4.3
-  - 2.5.0
+  - 2.3
+  - 2.4
+  - 2.5
+
+gemfile:
+  - gemfiles/Gemfile.rails42
+  - gemfiles/Gemfile.rails50
+  - gemfiles/Gemfile.rails51
 
 sudo: false
 
