--- a/code_safety.yml
+++ b/code_safety.yml
@@ -15,7 +15,7 @@ file safety:
   ".travis.yml":
     comments: 
     reviewed_by: josh.pencheon
-    safe_revision: fbc1cf349a296e3489e4b27b4de6c52222113926
+    safe_revision: 3316c8246806653c6ae3f50864b710dd76a064b3
   CODE_OF_CONDUCT.md:
     comments: 
     reviewed_by: timgentry
@@ -60,6 +60,10 @@ file safety:
     comments: 
     reviewed_by: josh.pencheon
     safe_revision: fbc1cf349a296e3489e4b27b4de6c52222113926
+  gemfiles/Gemfile.rails52:
+    comments: 
+    reviewed_by: josh.pencheon
+    safe_revision: 3316c8246806653c6ae3f50864b710dd76a064b3
   lib/tnql.rb:
     comments: 
     reviewed_by: timgentry
@@ -213,7 +217,7 @@ file safety:
   lib/tnql/version.rb:
     comments: 
     reviewed_by: josh.pencheon
-    safe_revision: 6131fb1379d6ba622811f33415cf5018c382de53
+    safe_revision: db682b5f8f6d8593bc8c447ae8f0dc3db403d277
   test/nodes/age_test.rb:
     comments: 
     reviewed_by: timgentry
@@ -281,4 +285,4 @@ file safety:
   tnql.gemspec:
     comments: 
     reviewed_by: josh.pencheon
-    safe_revision: fbc1cf349a296e3489e4b27b4de6c52222113926
+    safe_revision: 3316c8246806653c6ae3f50864b710dd76a064b3
