--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: ruby
 rvm:
 - 2.5
 - 2.6
+- 2.7
 gemfile:
 - gemfiles/Gemfile.rails52
+- gemfiles/Gemfile.rails60
 sudo: false
 cache: bundler
 before_script: bundle update
