# update rubocop configuration

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,1 @@
-inherit_from: 'https://raw.githubusercontent.com/PublicHealthEngland/ndr_dev_support/master/.rubocop.yml'
-
-Rails:
-  Enabled: false
-
-AllCops:
-  TargetRubyVersion: 2.3
+require: ndr_dev_support
